2007-09-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/renderers/multiline.py (_on_editor_focus_out_event):
	* gaupol/gtk/renderers/time.py (_on_editor_focus_out_event):
	Return False so that the editing widget gets the event as well.

2007-09-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/gaupol.iss:
	Remove EULAish LicenseFile field.

	* tools/py2exe.bat:
	Remove unused iso-codes .mo files.

2007-09-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.11

2007-09-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/actions/edit.py:
	* gaupol/gtk/agents/edit.py:
	Add actions for extending the current selection up to the first or the
	last subtitle without moving focus or scrolling. (#9895)

2007-09-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_init_props):
	Enable rubber-banding.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Remove search.patterns and search.replacements.

	* gaupol/gtk/dialogs/search.py:
	Save search history to $HOME/.gaupol/search instead of the
	configuration file to avoid quoting problems.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Add quotation marks and apostrophes at the ends of lines to the
	"Spaces before punctuation marks" pattern.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (preview):
	Raise gobject timeout to 500 ms.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/iso_3166.xml:
	Update from iso-codes 1.4.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	* data/glade/text-assistant-line-break-options-page.glade:
	* gaupol/agents/text.py:
	* gaupol/gtk/assistants/text/line.py:
	Add more detailed line-break skip conditions.

2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.line-break.in:
	* data/patterns/Latn.line-break.in:
	Allow "Clauses" patterns to end in $.
